@@ -2,10 +2,11 @@ Changes between 1.2.1 and 1.2.2 (release pending)
 ==================================================
 
 - new mechanism to allow plugins to register new hooks 
+- fixes for handling of unicode exception values
 - added links to the new capturelog and coverage plugins 
 - (issue87) fix unboundlocal error in assertionold code 
 - (issue86) improve documentation for looponfailing
-- fix jython/win32 issues
+- fixes for making jython/win32 work more properly 
 - ship distribute_setup.py version 0.6.10 
 
 
